provision-scripts/cloud-formation/workshopMonolith.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation Template for the AWS Modernization workshop with Dynatrace.
  You will be billed for the AWS resources used if you create a stack from this template.
Parameters:
  DynatraceBaseURL:
    Description: Your Dynatrace Base URL (example https://ABC.live.dynatrace.com)
    Type: String
  DynatracePaasToken:
    Description: Your Dynatrace PaaS token
    Type: String
  KeyPairName:
    Description: KeyPair name for the EC2 instance
    Type: String
    Default: ws-default-keypair
  ResourcePrefix:
    Description: Optional value to prefix resource names
    Type: String
    Default: ""
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: "m5.xlarge"
  AvailabilityZone:
    Description: Subnet AvailabilityZone
    Type: String
Mappings:
  RegionMap: 
    us-east-1: 
      AMI: ami-09e67e426f25ce0d7
    us-east-2: 
      AMI: ami-00399ec92321828f5
    us-west-1:
      AMI: ami-0d382e80be7ffdae5
    us-west-2: 
      AMI: ami-03d5c68bab01f3496
    ap-southeast-1:
      AMI: ami-0d058fe428540cd89
    ap-southeast-2:
      AMI: ami-0567f647e75c7bc05
    eu-west-1:
      AMI: ami-0a8e758f5e873d1c1
    eu-west-2:
      AMI: ami-0194c3e07668a7e36
    eu-west-3:
      AMI: ami-0f7cd40eac2214b37
    eu-north-1:
      AMI: ami-0ff338189efb7ed37
    eu-central-1:
      AMI: ami-05f7491af5eef733a
Conditions:
  HasResourcePrefix: !Not [!Equals [!Ref ResourcePrefix, ""]]
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      AvailabilityZone: !Ref 'AvailabilityZone'
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
        - Key: Application
          Value: !Ref 'AWS::StackId'
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
        - Key: Application
          Value: !Ref 'AWS::StackId'
  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref 'RouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'Subnet'
      RouteTableId: !Ref 'RouteTable'
  DTOrdersInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'

  DTOrdersInstance:
    Type: AWS::EC2::Instance
    DependsOn: AttachGateway
    Properties:
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref 'KeyPairName'
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
      Tags:
        - Key: Name
          Value: !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
        - Key: Purpose
          Value: dynatrace-modernize-workshop
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: '20'
            DeleteOnTermination: 'true'
            Encrypted: 'false'
      UserData: !Base64
        Fn::Join:
          - ''
          - - "#!/bin/bash\n"
            - "DT_BASEURL="
            - !Ref DynatraceBaseURL
            - "\n"
            - "if [ \"${DT_BASEURL: -1}\" == \"/\" ]; then"
            - " DT_BASEURL=\"$(echo ${DT_BASEURL%?})\"; "
            - "fi\n"
            - wget -O Dynatrace-OneAgent.sh "
            - ${DT_BASEURL}/api/v1/deployment/installer/agent/unix/default/latest?Api-Token=
            - !Ref 'DynatracePaasToken'
            - "&arch=x86&flavor=default\"\n"
            - "/bin/sh Dynatrace-OneAgent.sh"
            - " --set-app-log-content-access=true"
            - " --set-infra-only=false"
            - " --set-host-name="
            - !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
            - " --set-host-group="
            - !If [HasResourcePrefix, !Sub "${ResourcePrefix}-dt-orders-monolith", dt-orders-monolith]
            - "\n"            
            - "sudo apt-get update\n"
            - "sudo apt-get install -y git\n"
            - "git clone https://github.com/dt-alliances-workshops/aws-modernization-dt-orders-setup.git /home/ubuntu/aws-modernization-dt-orders-setup\n"
            - "cd /home/ubuntu/aws-modernization-dt-orders-setup\n"
            - "sudo /home/ubuntu/aws-modernization-dt-orders-setup/provision-scripts/setup-host.sh dt-orders-monolith > /tmp/cloud-init-services.log\n"
      NetworkInterfaces:
        - GroupSet:
            - !Ref 'DTOrdersInstanceSecurityGroup'
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref 'Subnet'
Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'DTOrdersInstance'
